1. fitness phi updates 2. Read me updates

--- a/Website - Copy/templates/Common Recipies.html
+++ b/Website - Copy/templates/Common Recipies.html
@@ -67,7 +67,7 @@
 </head>
 <body>
     <button style='font-family:Satisfy' ><b> <a href="http://127.0.0.1:6400/">
-        Fitness Phy
+        Fitness Phi
     </a>
     </b>
     </button>
