--- a/Website - Copy/templates/about_us.html
+++ b/Website - Copy/templates/about_us.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Fitness Phy</title>
+    <title>Fitness Phi</title>
     <style>
         body{
             background: #faf0e6
@@ -58,7 +58,7 @@
 </head>
 <body>
     <button style='font-family:Satisfy' ><b> <a href="http://127.0.0.1:6400/">
-        Fitness Phy
+        Fitness Phi
     </a>
     </b>
     </button>
@@ -77,13 +77,13 @@
         Our Journey
     </h3>
     <p>
-        In a world filled with hustle and bustle, we recognized the need for a platform that promotes comprehensive well-being. Fitness Phy was born out of this vision, combining fitness routines with mouthwatering recipes to make health accessible to everyone. What started as a collective dream has become a reality, thanks to the dedication and hard work of our dynamic team.
+        In a world filled with hustle and bustle, we recognized the need for a platform that promotes comprehensive well-being. Fitness Phi was born out of this vision, combining fitness routines with mouthwatering recipes to make health accessible to everyone. What started as a collective dream has become a reality, thanks to the dedication and hard work of our dynamic team.
     </p>
     <h3>
         Our Holistic Commitment to You
     </h3>
     <p>
-        At Fitness Phy, we believe in a holistic approach to health. That's why our team invests countless hours into not only curating effective workout routines but also developing delicious and nutritious recipes—all with the goal of making health and fitness a flavorful and achievable journey for everyone.
+        At Fitness Phi, we believe in a holistic approach to health. That's why our team invests countless hours into not only curating effective workout routines but also developing delicious and nutritious recipes—all with the goal of making health and fitness a flavorful and achievable journey for everyone.
     </p>
     <h3>
         Why Choose Us?
