--- a/Website - Copy/templates/quiz.html
+++ b/Website - Copy/templates/quiz.html
@@ -69,7 +69,7 @@
 </head>
 <body>
     <button style='font-family:Satisfy' > <a href="http://127.0.0.1:6400/">
-       <b> Fitness Phy</b>
+       <b> Fitness Phi</b>
     </a>
     </button>
 
