--- a/Website - Copy/templates/home.html
+++ b/Website - Copy/templates/home.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Fitness Phy</title>
+    <title>Fitness Phi</title>
     <style>
         body{
             background: #faf0e6
@@ -59,7 +59,7 @@
 </head>
 <body>
     <button style='font-family:Satisfy' ><b> <a href="http://127.0.0.1:6400/">
-        Fitness Phy
+        Fitness Phi
     </a>
     </b>
     </button>
@@ -67,7 +67,7 @@
     <div class="circle">
         <div class="content">
             <h1 style="font-family: Raleway, ExtraBold; font-size: 180px;">
-                 Fitness Phy
+                 Fitness Phi
             </h1>
         </div>
     </div>
@@ -85,7 +85,7 @@
        What sets us apart is our innovative diagnostic tool, which takes a personalized approach to health. By considering your lifestyle, fitness goals, dietary preferences, and health history, our diagnostic tool generates tailored recommendations. This comprehensive analysis allows us to provide you with customized guidance on workout plans, dietary choices, and lifestyle adjustments, ensuring that your wellness journey is uniquely yours.
     </p>
     <p>
-        Join us at Fitness Phy as we embark on a shared commitment to holistic health. We are more than a website; we are a community dedicated to supporting and inspiring each other on the path to well-being. Thank you for being a part of our journey.
+        Join us at Fitness Phi as we embark on a shared commitment to holistic health. We are more than a website; we are a community dedicated to supporting and inspiring each other on the path to well-being. Thank you for being a part of our journey.
     </p>
 
 
