--- a/Website - Copy/templates/Common Recipies.html
+++ b/Website - Copy/templates/Common Recipies.html
@@ -11,7 +11,7 @@
     <title>Fitness Phy</title>
     <style>
         body{
-            background: #faf0e6;
+            background: #faf013;
         }
         h1{
             font-size:76px;
